update meta tags

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta property="og:title" content="Probabilidade Yu-Gi-Oh!">
     <meta property="og:description" content="Calcule a chance de comprar suas cartas mais importantes na mão inicial de Yu-Gi-Oh!.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://ygoprobability.github.io/">
-    <meta property="og:image" content="https://ygoprobability.github.io/imagem-preview.png">
+    <meta property="og:url" content="https://iagoborelli.github.io/ygoprobability.github.io/">
+    <meta property="og:image" content="https://iagoborelli.github.io/ygoprobability.github.io/imagem-preview.png">
     <meta name="theme-color" content="#1a2233">
 
     
@@ -43,25 +43,25 @@
                         <form id="probabilityForm" class="d-grid gap-3">
                             <div>
                                 <label for="deckSize" class="form-label">Tamanho do Deck</label>
-                                <input type="number" id="deckSize" value="40" min="1" max="60" class="form-control form-control-lg">
+                                <input type="number" id="deckSize" min="1" max="60" class="form-control form-control-lg">
                             </div>
 
                             <div>
                                 <label for="handSize" class="form-label">Tamanho da Mão Inicial</label>
-                                <input type="number" id="handSize" value="5" min="1"  class="form-control form-control-lg">
+                                <input type="number" id="handSize"  min="1"  class="form-control form-control-lg">
                             </div>
                             
                             <div>
                                 <label for="cardCount" class="form-label">Cópias da Carta no Deck </label>
-                                <input type="number" id="cardCount" value="3" min="1"  class="form-control form-control-lg">
+                                <input type="number" id="cardCount"  min="1"  class="form-control form-control-lg">
                             </div>
 
                             <div>
                                 <label class="form-label">Cópias Desejadas na Mão </label>
                                 <div class="input-group">
-                                    <input type="number" id="minCopies" value="1" min="0"  class="form-control form-control-lg" aria-label="Mínimo">
+                                    <input type="number" id="minCopies"  min="0"  class="form-control form-control-lg" aria-label="Mínimo">
                                     <span class="input-group-text">a</span>
-                                    <input type="number" id="maxCopies" value="3" min="0"  class="form-control form-control-lg" aria-label="Máximo">
+                                    <input type="number" id="maxCopies"  min="0"  class="form-control form-control-lg" aria-label="Máximo">
                                 </div>
                             </div>
 
