update meta tags

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:description" content="Calcule a chance de comprar suas cartas mais importantes na mão inicial de Yu-Gi-Oh!.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://iagoborelli.github.io/ygoprobability.github.io/">
-    <meta property="og:image" content="https://iagoborelli.github.io/ygoprobability.github.io/imagem-preview.png">
+    <meta property="og:image" content="https://iagoborelli.github.io/ygoprobability.github.io/ygo-preview.png">
     <meta name="theme-color" content="#1a2233">
 
     
